Fix radio buttons on ios

--- a/frontend/embed/v1/src/index.css
+++ b/frontend/embed/v1/src/index.css
@@ -117,6 +117,7 @@ label {
   -webkit-flex: 0 0 0;
   -ms-flex: 0 0 0;
   flex: 0 0 0;
+  min-width: 20px;
 }
 
 .option-wrapper:not(:last-child) {
